# CUnit

./: CMakeLists.txt  main.c  max_and_sum.h  sum_and_average.c
